--- a/src/Sulu/Bundle/CategoryBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/CategoryBundle/Resources/translations/sulu/backend.nl.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-    <file source-language="en" datatype="plaintext" original="file.ext">
+    <file source-language="en" target-language="nl" datatype="plaintext" original="file.ext">
         <body>
             <trans-unit id="543c99ff2964652633a5ca2169f22236" resname="content-navigation.category.details">
                 <source>content-navigation.category.details</source>
