--- a/src/Sulu/Bundle/LocationBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/LocationBundle/Resources/translations/sulu/backend.nl.xlf
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" version="1.2">
-    <file source-language="en" datatype="plaintext" original="file.ext">
+    <file source-language="en" target-language="nl" datatype="plaintext" original="file.ext">
         <body>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf001" resname="sulu.location.configure">
                 <source>sulu.location.configure</source>
