--- a/src/Sulu/Bundle/CollaborationBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/CollaborationBundle/Resources/translations/sulu/backend.nl.xlf
@@ -6,10 +6,9 @@
                 <source>content.collaboration.warning</source>
                 <target>
                     <![CDATA[
-                    This page is currently used by: <strong>%s</strong><br/>
-                    Your changes might get lost and you could erase the work of another author.
+                    Deze pagina is in gebruik door: <strong>%s</strong><br/>
+                    Je wijzigingen gaan mogelijk verlorgen of je wist het werk een andere auteur.
                     ]]>
-                </target>
             </trans-unit>
         </body>
     </file>
