--- a/src/Sulu/Bundle/LocationBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/LocationBundle/Resources/translations/sulu/backend.nl.xlf
@@ -4,47 +4,47 @@
         <body>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf001" resname="sulu.location.configure">
                 <source>sulu.location.configure</source>
-                <target>Configure Location</target>
+                <target>Configureer locatie</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf002" resname="sulu.location.locate-address">
                 <source>sulu.location.locate-address</source>
-                <target>Locate Address</target>
+                <target>Locatie adres</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf003" resname="sulu.location.title">
                 <source>sulu.location.title</source>
-                <target>Title</target>
+                <target>Titel</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf004" resname="sulu.location.street">
                 <source>sulu.location.street</source>
-                <target>Street</target>
+                <target>Straat</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf005" resname="sulu.location.number">
                 <source>sulu.location.number</source>
-                <target>Number</target>
+                <target>Nummer</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf006" resname="sulu.location.code">
                 <source>sulu.location.code</source>
-                <target>Code</target>
+                <target>Postcode</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf007" resname="sulu.location.town">
                 <source>sulu.location.town</source>
-                <target>Town</target>
+                <target>Stad</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf008" resname="sulu.location.country">
                 <source>sulu.location.country</source>
-                <target>Country</target>
+                <target>Land</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf009" resname="sulu.location.coords">
                 <source>sulu.location.coords</source>
-                <target>Coordinates (Long / Lat / Zoom)</target>
+                <target>Coördinaten (Long / Lat / Zoom)</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf00A" resname="sulu.location.map">
                 <source>sulu.location.map</source>
-                <target>Map</target>
+                <target>Kaart</target>
             </trans-unit>
             <trans-unit id="f1234asdf123123fd4a73a4123dfdf00B" resname="sulu.location.search">
                 <source>sulu.location.search</source>
-                <target>Search</target>
+                <target>Zoeken</target>
             </trans-unit>
         </body>
     </file>
