--- a/src/Sulu/Bundle/WebsiteBundle/Resources/translations/sulu/backend.nl.xlf
+++ b/src/Sulu/Bundle/WebsiteBundle/Resources/translations/sulu/backend.nl.xlf
@@ -8,11 +8,11 @@
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29002" resname="sulu.website.cache.remove">
                 <source>sulu.website.cache.remove</source>
-                <target>Cache clear</target>
+                <target>Cache legen</target>
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29003" resname="sulu.website.cache.title">
                 <source>sulu.website.cache.title</source>
-                <target>Cache settings</target>
+                <target>Cache-instellingen</target>
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29004" resname="sulu.website.cache.remove.success.title">
                 <source>sulu.website.cache.remove.success.title</source>
@@ -20,7 +20,7 @@
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29005" resname="sulu.website.cache.remove.success.description">
                 <source>sulu.website.cache.remove.success.description</source>
-                <target>successfully cleared</target>
+                <target>succesvol geleegd</target>
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29006" resname="sulu.website.cache.remove.error.title">
                 <source>sulu.website.cache.remove.error.title</source>
@@ -28,15 +28,15 @@
             </trans-unit>
             <trans-unit id="123f522ac181350142c0b4720e29007" resname="sulu.website.cache.remove.error.description">
                 <source>sulu.website.cache.remove.error.description</source>
-                <target>clear failed</target>
+                <target>legen niet gelukt</target>
             </trans-unit>
             <trans-unit id="1" resname="website.webspace.settings.domains">
                 <source>website.webspace.settings.domains</source>
-                <target>Domains</target>
+                <target>Domeinen</target>
             </trans-unit>
             <trans-unit id="2" resname="website.webspace.settings.all-domains">
                 <source>website.webspace.settings.all-domains</source>
-                <target>All Domains</target>
+                <target>Alle domeinen</target>
             </trans-unit>
             <trans-unit id="3" resname="website.webspace.settings.edit.title">
                 <source>website.webspace.settings.edit.title</source>
@@ -44,7 +44,7 @@
             </trans-unit>
             <trans-unit id="4" resname="website.webspace.settings.content">
                 <source>website.webspace.settings.content</source>
-                <target>Content</target>
+                <target>Inhoud</target>
             </trans-unit>
             <trans-unit id="5" resname="website.webspace.settings.type.google">
                 <source>website.webspace.settings.type.google</source>
@@ -56,19 +56,19 @@
             </trans-unit>
             <trans-unit id="7" resname="website.webspace.settings.type.custom">
                 <source>website.webspace.settings.type.custom</source>
-                <target>Custom</target>
+                <target>Aangepast</target>
             </trans-unit>
             <trans-unit id="8" resname="website.webspace.settings.edit.domain">
                 <source>website.webspace.settings.edit.domain</source>
-                <target>Domain</target>
+                <target>Domein</target>
             </trans-unit>
             <trans-unit id="9" resname="website.webspace.settings.edit.environment">
                 <source>website.webspace.settings.edit.environment</source>
-                <target>Environment</target>
+                <target>Omgeving</target>
             </trans-unit>
             <trans-unit id="10" resname="website.webspace.settings.key">
                 <source>website.webspace.settings.key</source>
-                <target>Key</target>
+                <target>Sleutel</target>
             </trans-unit>
             <trans-unit id="11" resname="website.webspace.settings.script">
                 <source>website.webspace.settings.script</source>
